# yoga-pose-estimation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  constants.py  inference.py  pyproject.toml  testing_model.py  train.py  unified-lint-workflow.yml
.github/workflows/: super-linter-only.yaml
scripts/: image_to_gif.py
