[project]
name = "yoga-pose-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.189",
]

[dependency-groups]
dev = [
    "imageio-ffmpeg>=0.6.0",
    "imageio[ffmpeg]>=2.37.0",
    "pre-commit>=4.3.0",
]
